--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Plotting Temperature logs with d3</title>
+  <meta charset="utf-8">
   <meta http-equiv="content-type" content="text/html; charset=UTF8">
-  <link rel="stylesheet" href="style.css">
+
+  <title>Plotting Temperature logs with d3</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="css/zen_style.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <script type="text/javascript" src="d3/date.js"></script>
   <script type="text/javascript" src="d3/d3.v3.js"></script>
   <script type="text/javascript" src="d3/queue.min.js"></script>
@@ -15,9 +21,9 @@
 <body>
   <div id="container" style="height: 600px; min-width: 310px; max-width: 1000px"></div>
   <script type="text/javascript" src="dataplot_highchart.js"></script>
-  <div>
-  <a href="https://github.com/Elucidation/ArduinoTemperatureLogger/tree/highcharts">Js Source Code</a>
-  <a href="https://github.com/Elucidation/ArduinoTemperatureLogger/tree/master">Arduino Yun Temperature Logged Source Code</a>
-  </div>
+  <footer>
+    <a href="https://github.com/Elucidation/ArduinoTemperatureLogger/tree/highcharts">Github Repository</a>
+    <a href="https://github.com/Elucidation/ArduinoTemperatureLogger/tree/master">Hardware Repository</a>
+  </footer>
 </body>
 </html>
