Center align chart

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-  <div id="container" style="height: 600px; min-width: 310px; max-width: 1000px"></div>
+  <div id="container"></div>
   <script type="text/javascript" src="dataplot_highchart.js"></script>
   <footer>
     <a href="https://github.com/Elucidation/ArduinoTemperatureLogger/tree/highcharts">Github Repository</a>
